--- a/PMS-PropertyHapa/Views/Auth/ChangePassword.cshtml
+++ b/PMS-PropertyHapa/Views/Auth/ChangePassword.cshtml
@@ -19,7 +19,8 @@
             var newRepeatPassword = $('#confirmPassword').val();
 
             if (newPassword !== newRepeatPassword) {
-                alert("New password and confirmation password do not match.");
+                    var Toast = Swal.mixin({ toast: true, position: 'top-end', showConfirmButton: false, progressBar: true, timer: 3000 });
+                    Toast.fire({ icon: 'error', title: 'New password and confirmation password do not match.' });
                 return;
             }
 
@@ -36,10 +37,12 @@
                 contentType: 'application/json',
                 data: JSON.stringify(changedata),
                 success: function (response) {
-                    alert("Password changed successfully.");
+                        var Toast = Swal.mixin({ toast: true, position: 'top-end', showConfirmButton: false, progressBar: true, timer: 3000 });
+                        Toast.fire({ icon: 'success', title: 'Password changed successfully.' });
                 },
                 error: function (xhr, status, error) {
-                    alert("An error occurred: " + xhr.responseText);
+                        var Toast = Swal.mixin({ toast: true, position: 'top-end', showConfirmButton: false, progressBar: true, timer: 3000 });
+                        Toast.fire({ icon: 'error', title: 'An error occured' });
                 }
             });
         });
