--- a/PMS-PropertyHapa/Views/Auth/ForgotPassword.cshtml
+++ b/PMS-PropertyHapa/Views/Auth/ForgotPassword.cshtml
@@ -19,19 +19,24 @@
                     contentType: 'application/json',
                     data: JSON.stringify({ Email: email }),
                     success: function (response) {
-                        // Check if email was found
+                     
                         if (response.isSuccess) {
-                            alert("Reset password email sent successfully. Please check your email.");
+                            var Toast = Swal.mixin({ toast: true, position: 'top-end', showConfirmButton: false, progressBar: true, timer: 3000 });
+                            Toast.fire({ icon: 'success', title: 'Reset password email sent successfully. Please check your email.' });
                         } else {
-                            alert("No user found with this email.");
+                            var Toast = Swal.mixin({ toast: true, position: 'top-end', showConfirmButton: false, progressBar: true, timer: 3000 });
+                            Toast.fire({ icon: 'error', title: 'No user found with this email.' });
                         }
                     },
                     error: function (xhr, status, error) {
                         console.error(xhr.responseText);
                         if (xhr.status === 404) {
-                            alert("No user found with this email.");
+                            var Toast = Swal.mixin({ toast: true, position: 'top-end', showConfirmButton: false, progressBar: true, timer: 3000 });
+                            Toast.fire({ icon: 'error', title: 'No user found with this email.' });
+
                         } else {
-                            alert("An error occurred while processing your request.");
+                            var Toast = Swal.mixin({ toast: true, position: 'top-end', showConfirmButton: false, progressBar: true, timer: 3000 });
+                            Toast.fire({ icon: 'error', title: 'An error occurred while processing your request.' });
                         }
                     }
                 });
