--- a/PMS-PropertyHapa/Views/Auth/ResetPassword.cshtml
+++ b/PMS-PropertyHapa/Views/Auth/ResetPassword.cshtml
@@ -28,10 +28,12 @@
                     contentType: 'application/json',
                     data: JSON.stringify(formData),
                     success: function (response) {
-                        alert("Password reset successfully.");
+                        var Toast = Swal.mixin({ toast: true, position: 'top-end', showConfirmButton: false, progressBar: true, timer: 3000 });
+                        Toast.fire({ icon: 'success', title: 'Password reset successfully.' });
                     },
                     error: function (xhr, status, error) {
-                        alert("Error resetting password: " + xhr.responseText);
+                        var Toast = Swal.mixin({ toast: true, position: 'top-end', showConfirmButton: false, progressBar: true, timer: 3000 });
+                        Toast.fire({ icon: 'error', title: 'Error resetting password' });
                     }
                 });
             });
