--- a/PMS-PropertyHapa/Views/Auth/ForgotPassword.cshtml
+++ b/PMS-PropertyHapa/Views/Auth/ForgotPassword.cshtml
@@ -11,13 +11,14 @@
             $('#forgotPasswordForm').on('submit', function (e) {
                 e.preventDefault();
 
-                var email = $('#Email').val();
+                var formData = new FormData(this);
 
                 $.ajax({
-                    url: 'https://localhost:7178/api/v1/UsersAuth/forgot-password',
+                    url: "/Auth/ForgotPassword",
                     type: 'POST',
-                    contentType: 'application/json',
-                    data: JSON.stringify({ Email: email }),
+                    processData: false, 
+                    contentType: false,  
+                    data: formData,
                     success: function (response) {
                      
                         if (response.isSuccess) {
