--- a/PMS-PropertyHapa/Views/Auth/ResetPassword.cshtml
+++ b/PMS-PropertyHapa/Views/Auth/ResetPassword.cshtml
@@ -7,6 +7,7 @@
 
 @section Scripts {
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script>
         $(document).ready(function () {
             var urlParams = new URLSearchParams(window.location.search);
@@ -16,17 +17,15 @@
             $('#resetPasswordForm').on('submit', function (e) {
                 e.preventDefault();
 
-                var formData = {
-                    Email: encryptedEmail, 
-                    Password: $('#Password').val(),
-                    ConfirmPassword: $('#ConfirmPassword').val()
-                };
+                var formData = new FormData(this);
+                formData.append('Email', encryptedEmail); 
 
                 $.ajax({
-                    url: 'https://localhost:7178/api/v1/UsersAuth/reset-password',
+                    url: "/Auth/ResetPassword",
                     type: 'POST',
-                    contentType: 'application/json',
-                    data: JSON.stringify(formData),
+                    processData: false,
+                    contentType: false, 
+                    data: formData,
                     success: function (response) {
                         var Toast = Swal.mixin({ toast: true, position: 'top-end', showConfirmButton: false, progressBar: true, timer: 3000 });
                         Toast.fire({ icon: 'success', title: 'Password reset successfully.' });
@@ -40,6 +39,7 @@
         });
     </script>
 }
+
 
 
 
