--- a/PMS-PropertyHapa.Admin/Views/Home/Index.cshtml
+++ b/PMS-PropertyHapa.Admin/Views/Home/Index.cshtml
@@ -28,7 +28,7 @@
     </div>
     <div class="container-fluid default-dash">
         <div class="row">
-            <div class="col-xl-12 col-md-6 dash-xl-50">
+            <div class="col-12 col-sm-6">
                 <div class="card profile-greeting">
                     <div class="card-body">
                         <div class="media">
